samples/_failures_safe/1761355674_1a2e4e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0e2346c5.c: In function ‘main’:
./samples/SAFE/__tmp_0e2346c5.c:143:22: error: expected ‘)’ at end of input
  143 |     add_edge(&g, 1, 2
      |             ~        ^
      |                      )
./samples/SAFE/__tmp_0e2346c5.c:143:5: error: too few arguments to function ‘add_edge’
  143 |     add_edge(&g, 1, 2
      |     ^~~~~~~~
./samples/SAFE/__tmp_0e2346c5.c:29:6: note: declared here
   29 | void add_edge(Graph *g, int from, int to, int weight) {
      |      ^~~~~~~~
./samples/SAFE/__tmp_0e2346c5.c:143:5: error: expected declaration or statement at end of input
  143 |     add_edge(&g, 1, 2
      |     ^~~~~~~~
